# academic-compass

./: .gitignore  README.md  SETUP_INSTRUCTIONS.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
notebook-lm-clone/: app.py  check_available_models.py  list_models.py  pyproject.toml  test_gemini_key.py
notebook-lm-clone/api/: main.py
notebook-lm-clone/src/document_processing/: doc_processor.py
notebook-lm-clone/src/generation/: rag.py
notebook-lm-clone/src/podcast/: script_generator.py  text_to_speech.py  tts_fallback.py
notebook-lm-clone/src/vector_database/: milvus_vector_db.py
src/: index.css
src/app/: App.tsx
src/app/routes/: Index.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx
src/components/: ConversationCanvas.tsx  CourseCard.tsx  MindMapView.tsx  ProtectedRoute.tsx  QuizCard.tsx  RightPanel.tsx  Sidebar.tsx  UserProfile.tsx  VoiceButton.tsx
src/components/ui/: button.tsx
src/context/: UserContext.tsx
src/examples/: AUTH_INTEGRATION_EXAMPLES.tsx
src/features/analytics/components/: AnalyticsView.tsx
src/features/chat/components/: ChatMessage.tsx  ConversationCanvas.tsx  VoiceButton.tsx
src/features/layout/components/: RightPanel.tsx  Sidebar.tsx
src/features/learning/components/: CourseCard.tsx  FeedbackCard.tsx  FlashcardView.tsx  MindMapTree.tsx  QuizView.tsx  ResourceItem.tsx  SummaryView.tsx
src/features/mindmap/components/: MindMapNode.tsx  MindMapView.tsx
src/hooks/user/: index.ts  useUserScoped.ts
src/middleware/: auth-middleware.ts
src/pages/: Index.tsx
src/types/api/: index.ts
(+2 files in other folders)
